tests/lean/1207.lean.expected.out
1207.lean:15:2: error: unknown identifier 'h'
1207.lean:21:26: error: unknown identifier 'foo'
